--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 server.port = 9394
 server.servlet.context-path=/springbootDemo
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
 name=Han
 age=30
 #database
