--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,12 @@
 		   <artifactId>lombok</artifactId>
 		</dependency>
 		
+		
+		<!-- SpringBoot recommend thymeleal to html -->
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
